--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,6 @@ target_link_libraries(untitled PRIVATE SDL2::SDL2_ttf)
 
 find_package(sdl2-mixer CONFIG REQUIRED)
 target_link_libraries(untitled PRIVATE SDL2::SDL2_mixer)
+
+set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
